feat: remove single-item agent-instance history-create endpoint
Removes the deprecated single-item POST /agent-instances/{key}/history
endpoint from the REST API and the Java client, now that the batched
history(...) write path (PATCH/CREATE) is the only supported way to
append agent-instance history. This closes the OpenAPI spec path and
its request/response schemas, the gateway REST controller and mapper
method, the gateway-to-broker request class, the gateway-mapping-http
validator method, and the Java client's create-history-item command
and response classes, plus their dedicated tests.

The engine-side AGENT_HISTORY:CREATE processor is intentionally left
in place, unreachable from any real caller now that the API and client
surfaces above are gone. Removing it from the engine is a separate,
larger piece of work than this API/client cleanup and is deferred; the
in-repo engine test suite that drives it directly through the engine
test harness (AgentHistoryClient.create()) is left untouched as well,
since it still exercises real, still-registered engine behavior.

Also migrates the one in-repo test caller of the removed client
command, AgentInstanceAuthorizationIT/AgentInstanceHistorySearchIT/
AgentInstanceTenancyIT, onto the batched history(...) call.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>