@@ -16,6 +16,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import io.camunda.client.CamundaClient;
 import io.camunda.client.api.command.AgentInstanceHistoryContent;
 import io.camunda.client.api.command.AgentInstanceHistoryContent.ObjectContent;
+import io.camunda.client.api.command.AgentInstanceHistoryItem;
 import io.camunda.client.api.command.AgentInstanceHistoryMetrics;
 import io.camunda.client.api.search.enums.AgentInstanceHistoryRole;
 import io.camunda.client.api.search.response.AgentInstanceHistory;
@@ -28,6 +29,7 @@ import java.time.OffsetDateTime;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 import org.awaitility.Awaitility;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -107,53 +109,53 @@ public class AgentInstanceHistorySearchIT {
     jobKey = activatedJobs.get(0).getKey();
 
     // Create 3 history items with different roles
-    historyItemKey1 =
+    final var createdHistory =
         camundaClient
-            .newCreateAgentHistoryItemCommand(agentInstanceKey)
+            .newUpdateAgentInstanceCommand(agentInstanceKey)
             .elementInstanceKey(elementInstanceKey)
             .jobKey(jobKey)
-            .role(AgentInstanceHistoryRole.USER)
-            .content(List.of(AgentInstanceHistoryContent.text("Hello, what can you do?")))
-            .producedAt(OffsetDateTime.parse("2025-06-01T10:00:00Z"))
-            .send()
-            .join()
-            .getHistoryItemKey();
-
-    historyItemKey2 =
-        camundaClient
-            .newCreateAgentHistoryItemCommand(agentInstanceKey)
-            .elementInstanceKey(elementInstanceKey)
-            .jobKey(jobKey)
-            .role(AgentInstanceHistoryRole.ASSISTANT)
-            .content(List.of(AgentInstanceHistoryContent.text("I can help with many tasks.")))
-            .producedAt(OffsetDateTime.parse("2025-06-01T10:01:00Z"))
-            .metrics(
-                new AgentInstanceHistoryMetrics()
-                    .inputTokens(512L)
-                    .outputTokens(148L)
-                    .durationMs(1200L))
-            .send()
-            .join()
-            .getHistoryItemKey();
-
-    historyItemKey3 =
-        camundaClient
-            .newCreateAgentHistoryItemCommand(agentInstanceKey)
-            .elementInstanceKey(elementInstanceKey)
-            .jobKey(jobKey)
-            .role(AgentInstanceHistoryRole.TOOL_RESULT)
-            .content(
+            .history(
                 List.of(
-                    AgentInstanceHistoryContent.object(
-                        Arrays.asList(Map.of("id", 1), Map.of("id", 2))),
-                    AgentInstanceHistoryContent.object(Arrays.asList(10, 20, 30)),
-                    AgentInstanceHistoryContent.object(42),
-                    AgentInstanceHistoryContent.object(true),
-                    AgentInstanceHistoryContent.object("search-complete")))
-            .producedAt(OffsetDateTime.parse("2025-06-01T10:02:00Z"))
+                    new AgentInstanceHistoryItem()
+                        .historyItemId(UUID.randomUUID().toString())
+                        .loopIteration(1)
+                        .role(AgentInstanceHistoryRole.USER)
+                        .content(
+                            List.of(AgentInstanceHistoryContent.text("Hello, what can you do?")))
+                        .producedAt(OffsetDateTime.parse("2025-06-01T10:00:00Z")),
+                    new AgentInstanceHistoryItem()
+                        .historyItemId(UUID.randomUUID().toString())
+                        .loopIteration(1)
+                        .role(AgentInstanceHistoryRole.ASSISTANT)
+                        .content(
+                            List.of(
+                                AgentInstanceHistoryContent.text("I can help with many tasks.")))
+                        .producedAt(OffsetDateTime.parse("2025-06-01T10:01:00Z"))
+                        .metrics(
+                            new AgentInstanceHistoryMetrics()
+                                .inputTokens(512L)
+                                .outputTokens(148L)
+                                .durationMs(1200L)),
+                    new AgentInstanceHistoryItem()
+                        .historyItemId(UUID.randomUUID().toString())
+                        .loopIteration(1)
+                        .role(AgentInstanceHistoryRole.TOOL_RESULT)
+                        .content(
+                            List.of(
+                                AgentInstanceHistoryContent.object(
+                                    Arrays.asList(Map.of("id", 1), Map.of("id", 2))),
+                                AgentInstanceHistoryContent.object(Arrays.asList(10, 20, 30)),
+                                AgentInstanceHistoryContent.object(42),
+                                AgentInstanceHistoryContent.object(true),
+                                AgentInstanceHistoryContent.object("search-complete")))
+                        .producedAt(OffsetDateTime.parse("2025-06-01T10:02:00Z"))))
             .send()
             .join()
-            .getHistoryItemKey();
+            .getCreatedHistory();
+
+    historyItemKey1 = createdHistory.get(0).getHistoryItemKey();
+    historyItemKey2 = createdHistory.get(1).getHistoryItemKey();
+    historyItemKey3 = createdHistory.get(2).getHistoryItemKey();
 
     // Complete the job so JobCompleteProcessor emits AGENT_HISTORY:COMMIT,
     // causing history items to transition to COMMITTED and become searchable.
